--- a/journals/06-literature_review/06-literature_review.html
+++ b/journals/06-literature_review/06-literature_review.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Katherine Goode" />
 
-<meta name="date" content="2019-08-27" />
+<meta name="date" content="2019-09-04" />
 
 <title>Literature Review</title>
 
@@ -1545,7 +1545,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Literature Review</h1>
 <h4 class="author">Katherine Goode</h4>
-<h4 class="date">August 27, 2019</h4>
+<h4 class="date">September 04, 2019</h4>
 
 </div>
 
@@ -1657,6 +1657,7 @@ div.tocify {
 <li>Fit <span class="math inline">\(s_x\)</span> to this new data, which to learn the closest decision border to <span class="math inline">\(x\)</span>.</li>
 </ol>
 <p><em>Comment: I feel like this will only work well if there is an observation from the other class “close” to the case of interest.</em></p>
+<p><em>Heike metioned that the sampling method they are doing is similar to what an SVM is doing.</em></p>
 <p><strong>References to Look Into</strong></p>
 <ul>
 <li>Craven and Shavlik (1996): show that “increasing the density of instances is beneficial for the surrogate accuracy”</li>
